fix bug 661774, handle error fetching all imap flags, don't throw away hdr cache on such errors, r=neil